--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ cachetools==5.5.0
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
-chromadb==0.3.29
 click==8.1.8
 clickhouse-connect==0.8.9
 colorama==0.4.6
@@ -94,6 +93,9 @@ pulsar-client==3.5.0
 pyarrow==18.1.0
 PyAudio==0.2.14
 pycparser==2.22
+pydantic==2.10.5
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
 pydeck==0.9.1
 pydub==0.25.1
 pyee==12.1.1
